# paper-manager

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  index.html  modules.html  objects.inv  paper_manager.app.html  paper_manager.bib.html  paper_manager.entry.html  paper_manager.html  paper_manager.logging.html  paper_manager.utils.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  paper_manager.app.doctree  paper_manager.bib.doctree  paper_manager.doctree  paper_manager.entry.doctree  paper_manager.logging.doctree  paper_manager.utils.doctree
.github/workflows/: docs.yaml
_notes/: release.md  sphinx.md
_sources/: index.rst.txt  modules.rst.txt  paper_manager.app.rst.txt  paper_manager.bib.rst.txt  paper_manager.entry.rst.txt  paper_manager.logging.rst.txt  paper_manager.rst.txt  paper_manager.utils.rst.txt
_static/: documentation_options.js
docs_src/: conf.py
src/paper_manager/: __init__.py  __main__.py
src/paper_manager/app/: __init__.py  _app.py
src/paper_manager/bib/: __init__.py  _load.py
src/paper_manager/entry/: __init__.py  _entry.py  typing.py
src/python_template/: __main__.py
tests/: test_import.py
