# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-manager"
dynamic = ["version"]
dependencies = [
    "typing-extensions >= 4.0.0; python_version < '3.8'",
    "urllib3 == 1.26.16",
    "crossrefapi == 1.6.0",
    "pandas",
    "streamlit",
    "bibtexparser",
    "streamlit-pdf-viewer",
    "pybtex",
]
requires-python = ">= 3.8"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["build"]
optional = ["colorlog"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]

[project.urls]
Homepage = "https://github.com/yu9824/paper-manager"
# Documentation = "https://readthedocs.org"
# PyPI = "https://pypi.org/project/paper-manager/"
Source = "https://github.com/yu9824/paper-manager"
Tracker = "https://github.com/yu9824/paper-manager/issues"
Changelog = "https://github.com/yu9824/paper-manager/blob/main/CHANGELOG.md"

[project.scripts]
paper-manager = "paper_manager.__main__:entrypoint"

# [project.gui-scripts]
# paper-manager = "paper_manager.__main__:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "paper_manager.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
"paper_manager" = ["*"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
unfixable = ["F401"]
